--- a/index.html
+++ b/index.html
@@ -1,34 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
-      integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
-      crossorigin=""
-    />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div class="app">
-      <div class="container-app">
-          <form class="search-ip" action="">
-              <input type="text" name="ip" id="input-ip" placeholder="Search IP" />
-              <button type="submit" id="btn-search-ip">Search</button>
-          </form>
-        <div id="map"></div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+    crossorigin="" />
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <title>Document</title>
+</head>
+
+<body>
+  <header>
+    <div class="container-app">
+      <h3>IP Adress Tracker</h3>
+      <form class="search-ip" action="">
+        <input type="text" name="ip" id="input-ip" placeholder="Search IP" />
+        <button type="submit" id="btn-search-ip"><img src="assets/images/icon-arrow.svg"></button>
+      </form>
+      <div class="result-bar">
+          <div class="result-item">
+              <span>IP ADRESS</span>
+              <p>8.8.8.8</p>
+          </div>
+          <div class="result-item">
+            <span>LOCATION</span>
+            <p>8.8.8.8</p>
+        </div>
+        <div class="result-item">
+          <span>TIME ZONE</span>
+          <p>8.8.8.8</p>
+      </div>
+      <div class="result-item">
+        <span>ISP</span>
+        <p>8.8.8.8</p>
+    </div>
       </div>
     </div>
+    </header>
 
-    <script
-      src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+    <section class="app">
+        <div id="map"></div>
+    </section>
+
+
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
       integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-      crossorigin=""
-    ></script>
+      crossorigin=""></script>
     <script src="assets/js/script.js"></script>
-  </body>
+</body>
+
 </html>
