--- a/index.html
+++ b/index.html
@@ -25,35 +25,35 @@
         <button type="submit" id="btn-search-ip"><img src="assets/images/icon-arrow.svg"></button>
       </form>
       <div class="result-bar">
-          <div class="result-item">
-              <span>IP ADRESS</span>
-              <p>8.8.8.8</p>
-          </div>
-          <div class="result-item">
-            <span>LOCATION</span>
-            <p>8.8.8.8</p>
+        <div class="result-item">
+          <span>IP ADRESS</span>
+          <p id="ip">8.8.8.8</p>
+        </div>
+        <div class="result-item">
+          <span>LOCATION</span>
+          <p id="location">8.8.8.8</p>
         </div>
         <div class="result-item">
           <span>TIME ZONE</span>
-          <p>8.8.8.8</p>
+          <p id="timeZone">8.8.8.8</p>
+        </div>
+        <div class="result-item">
+          <span>ISP</span>
+          <p id="ISP">8.8.8.8</p>
+        </div>
       </div>
-      <div class="result-item">
-        <span>ISP</span>
-        <p>8.8.8.8</p>
     </div>
-      </div>
-    </div>
-    </header>
+  </header>
 
-    <section class="app">
-        <div id="map"></div>
-    </section>
+  <section class="app">
+    <div id="map"></div>
+  </section>
 
 
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-      integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-      crossorigin=""></script>
-    <script src="assets/js/script.js"></script>
+  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+    crossorigin=""></script>
+  <script src="assets/js/script.js"></script>
 </body>
 
 </html>
