--- a/index.html
+++ b/index.html
@@ -20,10 +20,16 @@
   <header>
     <div class="container-app">
       <h3>IP Adress Tracker</h3>
-      <form class="search-ip" action="">
-        <input type="text" name="ip" id="input-ip" placeholder="Search IP" />
-        <button type="submit" id="btn-search-ip"><img src="assets/images/icon-arrow.svg"></button>
-      </form>
+      <div class="search">
+        <form class="search-input" action="">
+          <input type="text" name="ip" id="input-ip" placeholder="Search IP" />
+          <button type="submit" id="btn-search-ip"><img src="assets/images/icon-arrow.svg"></button>
+
+        </form>
+        <output></output>
+      </div>
+
+
       <div class="result-bar">
         <div class="result-item">
           <span>IP ADRESS</span>
@@ -48,7 +54,6 @@
   <section class="app">
     <div id="map"></div>
   </section>
-
 
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
