--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
     crossorigin="" />
   <link rel="stylesheet" href="assets/css/style.css" />
-  <title>Document</title>
+  <title>IP Adress Tracker</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
       <h3>IP Adress Tracker</h3>
       <div class="search">
         <form class="search-input" action="">
-          <input type="text" name="ip" id="input-ip" placeholder="Search IP" />
+          <input type="text" name="ip" id="input-ip" placeholder="Search for any IP adress or domain" />
           <button type="submit" id="btn-search-ip"><img src="assets/images/icon-arrow.svg"></button>
 
         </form>
